Update story for draggable, fix checkmark alignment when draggable is set

--- a/src/components/DataGrid/scss/components/DataGridControl/styles/dataGridControl.scss
+++ b/src/components/DataGrid/scss/components/DataGridControl/styles/dataGridControl.scss
@@ -7,7 +7,12 @@
   max-height: 3rem;
 
   &.draggable {
-    margin-left: -2%;
+    .onex-data-grid-control__check {
+      margin-left: 2.55rem;
+    }
+    .onex-data-grid-bulk-actions {
+      padding-left: 2.55rem;
+    }
   }
 
   &__title {
